@@ -166,6 +166,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #5257: refactored all tests in distutils, so they use 
+  support.TempdirManager, to avoid writing in the tests directory.
+
 - Issue #4524: distutils build_script command failed with --with-suffix=3.
   Initial patch by Amaury Forgeot d'Arc.
 
